Kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: ivolve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - python-app
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: python-app
          image: 781978598486.dkr.ecr.us-east-1.amazonaws.com/clouddevops-app:12
          ports:
            - containerPort: 5000
